# Lengine

./: .gitignore  CMakeLists.txt  config.json
DefaultGameFolder/AssetDatabase/: assetdb.json
DefaultGameFolder/Scenes/: emptyScene.json
assets/Materials/: defaultMaterial.mtl  lightSourceMaterial.mtl
assets/Shaders/: background.frag  background.vert  blur.frag  brdfShader.frag  debug.frag  debug.vert  defaultShader.frag  defaultShader.vert  defaultSimpleShader.frag  depthCubeMapShader.frag  depthNormalShader.frag  depthNormalShader.vert  depthShader.frag  equirect_to_cubemap.frag  grid.frag  grid.vert  hdrBloom.frag  hdrShader.frag  hdrShader.vert  hdrToneMapping.frag  irradiance_convolution.frag  outlineShader.frag  outlineShader.vert  pbr.frag  pbr.vert  physicsDebug.frag  physicsDebug.vert  prefilterShader.frag
defaults/scenes/: defaultScene.json
docs/: AssetPipeline.drawio
src/: main.cpp
src/animations/: AnimationSystem.cpp
src/assets/: AssetRegistry.cpp  AssetRegistry.h  MaterialRegistry.h  MeshRegistry.h  ShaderRegistry.h  TextureRegistry.h
src/core/: EditorApp.cpp  EditorApp.h  EngineCore.cpp  EngineCore.h  EventSystem.cpp  EventSystem.h  GraphicsEngine.cpp  GraphicsEngine.h  Lengine.h  Timer.h  paths.h  settings.cpp  settings.h
src/editor/: EditorLayer.cpp  EditorLayer.h  EditorManipulation.cpp  EditorManipulation.h  EditorSelection.h  MainMenuBar.h
src/editor/imgui/: ImguiLayer.cpp  ImguiLayer.h
src/editor/panels/: AssetPanel.cpp  AssetPanel.h  EnvironmentPanel.h  InspectorPanel.cpp  InspectorPanel.h  PerformancePanel.cpp  PerformancePanel.h  RendererSettingsPanel.cpp  RendererSettingsPanel.h  SceneHeirarchyPanel.cpp  SceneHeirarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
src/graphics/animations/: Animation.h  AnimationSystem.cpp  AnimationSystem.h  Animator.h  Skeleton.h
src/graphics/camera/: Camera3d.cpp  Camera3d.h
src/graphics/frameBuffers/: DepthNormalFramebuffer.cpp  DepthNormalFramebuffer.h  FrameBuffer.cpp  FrameBuffer.h  GBuffer.cpp  GBuffer.h  HDRFramebuffer.cpp  HDRFramebuffer.h  MSAADepthNormalFramebuffer.cpp  MSAADepthNormalFramebuffer.h  MSAAFramebuffer.cpp  MSAAFramebuffer.h  MSAAHDRFramebuffer.cpp  MSAAHDRFramebuffer.h  SSAOFramebuffer.cpp  SSAOFramebuffer.h
src/graphics/geometry/: Bounds.h  FullScreenQuad.cpp  FullScreenQuad.h  Gizmos.cpp  Gizmos.h  HDREnvironment.cpp  HDREnvironment.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ray.h  skybox.cpp  skybox.h
src/graphics/lightning/: Light.h
src/graphics/material/: MTLLoader.h  Material.h  MaterialLoader.h
src/graphics/opengl/: GLSLProgram.cpp  GLSLProgram.h  GLTexture.h
src/graphics/renderer/: DeferredRenderer.cpp  DeferredRenderer.h  ForwardRenderer.cpp  ForwardRenderer.h  FrameBuffer.cpp  FrameBuffer.h  HDRFramebuffer.cpp  HDRFramebuffer.h  IRenderer.cpp  IRenderer.h  MSAAFramebuffer.cpp  MSAAFramebuffer.h  RenderPipeline.cpp  RenderPipeline.h  Renderer.cpp  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  shadowCubeMap.cpp  shadowMap.cpp  shadowMap.h
src/graphics/renderer/PostProcess/: PingPongFrameBuffer.h  PostProcessing.cpp  PostProcessing.h
src/graphics/shadowMaps/: shadowCubeMap.cpp  shadowCubeMap.h  shadowMap.cpp  shadowMap.h
src/logging/: LogBuffer.h  OutputRedirect.h
src/physics/: PhysicsSystem.cpp  PhysicsSystem.h
src/platform/: InputHandler.cpp  InputHandler.h  InputManager.cpp  InputManager.h  Window.cpp  Window.h
src/resources/: AssetDatabase.h  AssetEditor.h  AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h  ImageLoader.cpp  ImageLoader.h  LoadOBJ.h  LoadingSystem.cpp  LoadingSystem.h  ResourceManager.cpp  TextureCache.cpp  TextureCache.h
src/resources/assetDatabase/: AssetDatabase.cpp  AssetDatabase.h  AssetSerializer.cpp  AssetSerializer.h  MeshAsset.h
src/scene/: Entity.cpp  Entity.h  EntityComponentSystem.h  Prefab.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  TransformSystem.h  TrasformSystem.cpp
src/scene/components/: AnimationComponentStorage.h  AnimatonComponent.h  CameraComponent.h  CameraComponentStorage.h  ColliderComponent.h  ColliderComponentStorage.h  ControllerComponent.h  ControllerComponentStorage.h  Hierarchy.h  HierarchyStorage.h  Light.h  LightStorage.h  MeshFilter.h  MeshFilterStorage.h  MeshRenderer.h  MeshRendererStorage.h  MovementComponent.h  MovementComponentStorage.h  NameTagComponent.h  NameTagComponentStorage.h  RigidBodyComponent.h  RigidBodyStorage.h  SkeletonComponent.h  SkeletonComponentStorage.h  Transform.h  TransformStorage.h
src/transform/: TransformSystem.h
src/utils/: C++20.h  UUID.h  filePath.h  fps.h  imGuiScreens.h  jsonHelper.h  objReaderWriter.h  thumbnailMaker.h
